# TinyNet

./: README.md  build.sh  pyproject.toml  setup.py
tests/: ddqn_test.py  mlp_test.py
tinynet/: graph.py  optim.py  state.py  tensor.py  utils.py
tinynet/models/: __init__.py  ddqn.py  mlp.py
tinynet/nn/: __init__.py  loss.py
