[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinynet"
version = "0.1.0"
authors = [
  { name="Leepand", email="leepand6@gmail.com" },
]
description = "Something between Tinygrad and Micrograd"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "graphviz",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/leepand/Tinygrad"
"Bug Tracker" = "https://github.com/leepand/Tinygrad/issues"
